# customapi-manager

./: Dockerfile  api.py  azure-pipelines.yml  customapi.py  docker.sh  pyproject.toml  readme.md  requirements.txt  test_customapi.py
CustomAPI/: __init__.py  backend.py  database.py  models.py  schemas.py  security.py  session.py  template.py
CustomAPI/Routers/: __init__.py  api.py  user.py
Routers/: __init__.py  api.py  user.py
