[tool.poetry]
name = "customapi-manager"
version = "0.1.0"
description = ""
authors = ["Amias Channer <me@amias.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
